# KernelForge.jl

./: .gitignore  CHANGELOG.md  LICENSE  Manifest.toml  Project.toml  README.md
.github/: FUNDING.yml
.github/workflows/: CI.yml  Documentation.yml
data/tuning/: A100.jl  A100.json  A100_inline.jl  A100_sort.json  MI300A.jl  MI300A.json  MI300A_inline.jl  MI300A_sort.json  MI300X.jl  MI300X.json  MI300X_inline.jl  README.md  RTX1000.jl  RTX1000.json  RTX1000_inline.jl  autotune_all.jl
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/api/: index.html
dev/examples/: index.html
dev/performances/: index.html
docs/: Manifest.toml  Project.toml  make.jl
docs/src/: api.md  examples.md  index.md  performances.md
examples/accumulate/: scan1d.jl
examples/copy/: vectorized_copy.jl
examples/mapreduce/: mapreduce1d.jl
ext/: KernelForgeAMDGPUExt.jl  KernelForgeCUDAExt.jl
perfs/cuda/: Manifest.toml  Project.toml
perfs/cuda_cpp/kokkos/: CMakeLists.txt  bench_kokkos_scan.cpp
perfs/julia/: architecture.jl  architectures.jl  bench_utils.jl  helpers.jl  init.jl  meta_helper.jl  number_format.jl  plot_utils.jl  plots_from_csv.jl  sort_svg_options.jl  vendor_int8.jl
src/: KernelForge.jl  Luma.jl  algorithms.jl  allocations.jl  architectures.jl  helpers.jl
src/copy/: copy.jl  copy_kernel.jl
test/: general_routine.jl  helpers.jl  runtests.jl
v0.1.0/: .documenter-siteinfo.json  index.html
v0.1.1/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v0.1.2/: .documenter-siteinfo.json  index.html  search_index.js
(+222 files in other folders)
